<resources>
    <string name="app_name">DataReflix</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_register">Register</string>
    <string name="title_back">Back</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_rol">Rol</string>
    <string name="text_username">Username:</string>
    <string name="text_email">Email:</string>
    <string name="text_myemail">My email</string>
    <string name="text_myname">My name</string>
    <string name="text_myusername">My username</string>
    <string name="text_password">Password:</string>
    <string name="text_forgot_password">Forgot your Password?</string>
    <string name="text_mypassword">My Password</string>
    <string name="text_phone">Phone:</string>
    <string name="text_update_profile">Update Profile</string>
    <string name="text_myphone">Phone or Whatsapp</string>
    <string name="text_signin">Sign In</string>
    <string name="text_login">Log In</string>
    <string name="text_login_finger">Login with Fingerprint</string>
    <string name="text_logout">Log Out</string>
    <string name="text_logo">Business Logo</string>
    <string name="text_image">Image</string>

    <string name="menu_home">Home</string>
    <string name="menu_schedules">Schedules</string>
    <string name="menu_users">Users</string>
    <string name="menu_profile">Profile</string>

    <string name="home_op1">Assistance</string>
    <string name="home_op2">Schedule</string>
    <string name="home_op3">Activities</string>
    <string name="home_op4">Permissions</string>
    <string name="home_op5">Work Schedule</string>
    <string name="home_op6">Reportes</string>

    <string name="btn_add">Create</string>

    <string-array name="rol">
        <item>Selecciona</item>
        <item>Administrador</item>
        <item>Empleado</item>
    </string-array>

    <string-array name="estado">
        <item>Selecciona</item>
        <item>Pendiente</item>
        <item>Revisión</item>
        <item>Aprobado</item>
        <item>Rechazado</item>
    </string-array>

    <string-array name="estado_actividad">
        <item>Selecciona</item>
        <item>Pendiente</item>
        <item>Revisión</item>
        <item>Finalizado</item>
    </string-array>

    <string-array name="estado_user">
        <item>Selecciona</item>
        <item>Activo</item>
        <item>Permiso Laboral</item>
        <item>Inactivo</item>
    </string-array>

    <string-array name="tipo_marcacion">
        <item>Selecciona</item>
        <item>Inicio de Jornada</item>
        <item>Inicio de Almuerzo</item>
        <item>Fin de Almuerzo</item>
        <item>Fin de Jornada</item>
    </string-array>

    <string-array name="tipo_solicitud">
        <item>Selecciona</item>
        <item>Permiso Laboral</item>
        <item>Vacaciones</item>
        <item>Reinicio de Actividades</item>
        <item>Reseteo de clave</item>
    </string-array>

    <string-array name="tipo_actividad">
        <item>Selecciona</item>
        <item>Recolección</item>
        <item>Atención</item>
    </string-array>


</resources>