<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jonathanaguilar.datareflix.Fragments.Fragment_Home"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_schedules"
        android:name="com.jonathanaguilar.datareflix.Fragments.Fragment_Horario"
        android:label="@string/menu_schedules"
        tools:layout="@layout/fragment_horario" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.jonathanaguilar.datareflix.Fragments.Fragment_Perfil"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_perfil" />
</navigation>