<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:orientation="vertical">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="10dp"
               android:text="@string/app_name"
               android:textAlignment="center"
               android:textSize="34sp"
               android:textColor="@color/proyecto_night"
               android:textStyle="bold" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="15dp"
               android:layout_marginTop="5dp"
               android:layout_marginRight="15dp"
               android:text="@string/text_username"
               android:textSize="16sp"
               android:textStyle="bold" />

           <EditText
               android:id="@+id/editTextTextEmailAddress"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="15dp"
               android:layout_marginTop="10dp"
               android:layout_marginRight="15dp"
               android:layout_marginBottom="10dp"
               android:ems="10"
               android:hint="@string/text_myusername"
               android:inputType="textEmailAddress"
               android:textSize="20sp"
               android:autofillHints="emailAddress" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="15dp"
               android:layout_marginTop="5dp"
               android:layout_marginRight="15dp"
               android:text="@string/text_password"
               android:textSize="16sp"
               android:textStyle="bold" />

           <EditText
               android:id="@+id/editTextTextPassword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="15dp"
               android:layout_marginTop="10dp"
               android:layout_marginRight="15dp"
               android:layout_marginBottom="10dp"
               android:ems="10"
               android:hint="@string/text_mypassword"
               android:inputType="textPassword"
               android:textSize="20sp"
               android:autofillHints="password" />

           <Button
               android:id="@+id/btn_ingresar"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="15dp"
               android:layout_marginTop="10dp"
               android:layout_marginRight="15dp"
               android:backgroundTint="@color/success"
               android:padding="15dp"
               android:textColor="@color/white"
               android:text="@string/text_login"
               android:textSize="20sp" />

           <TextView
               android:id="@+id/text_forget"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="15dp"
               android:layout_marginTop="5dp"
               android:layout_marginRight="15dp"
               android:layout_marginBottom="10dp"
               android:text="@string/text_forgot_password"
               android:textColor="@color/proyecto_light"
               android:textSize="16sp"
               android:textStyle="bold"
               android:gravity="center"
               />

       </LinearLayout>

   </ScrollView>


</RelativeLayout>