<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_rol"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:id="@+id/txt_rol"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:textColor="@color/proyecto_night"
                    >
                </TextView>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/img_perfil"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/perfil"
                android:scaleType="fitCenter"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/text_image">

            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_myname"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5sp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:gravity="center"
                android:id="@+id/txt_nombre"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_myusername"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="15sp"
                android:gravity="center"
                android:id="@+id/txt_cedula"
                android:layout_marginBottom="10sp"
                >
            </TextView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txt_estado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Estado"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_email"
                        android:textStyle="bold"
                        android:layout_marginBottom="5dp"
                        />

                    <EditText
                        android:id="@+id/editTextTextEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:ems="10"
                        android:hint="@string/text_myemail"
                        android:inputType="textEmailAddress"
                        android:textSize="15sp"
                        android:autofillHints="emailAddress" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_phone"
                        android:textStyle="bold"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="10dp"
                        />

                    <EditText
                        android:id="@+id/editTextTextPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:ems="10"
                        android:hint="@string/text_myphone"
                        android:inputType="phone"
                        android:textSize="15sp"
                        android:autofillHints="Phone" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Fecha Inicio de Contrato:"
                        android:textStyle="bold"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="10dp"
                        />

                    <TextView
                        android:id="@+id/txtfecha_ini_contrato"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="-"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Fecha Fin de Contrato:"
                        android:textStyle="bold"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="10dp"
                        />

                    <TextView
                        android:id="@+id/txtfecha_fin_contrato"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="-"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Cantidad de Solicitudes:"
                        android:textStyle="bold"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="10dp"
                        />

                    <TextView
                        android:id="@+id/cant_solicitudes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0 Marcaciones"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Cantidad de Marcaciones:"
                        android:textStyle="bold"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="10dp"
                        />

                    <TextView
                        android:id="@+id/cant_marcaciones"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0 Marcaciones"
                        android:layout_marginBottom="5dp"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_update_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/success"
                android:padding="15dp"
                android:textColor="@color/white"
                android:text="@string/text_update_profile"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_salir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/danger"
                android:padding="15dp"
                android:textColor="@color/white"
                android:text="@string/text_logout"
                android:textSize="20sp" />

        </LinearLayout>


    </ScrollView>


</RelativeLayout>